--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,26 @@
 
     <TextView
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="180dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="180dp"
+        android:layout_gravity="center" />
+
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello BluBlu!" />
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_gravity="center_vertical"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="491dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="778dp" />
 </RelativeLayout>
