Added Names to buttons in Free Play Board FP Board almost fully working, still cant delete pieces Still missing   content descriptions   start button listener   start button conditions   setings menu

--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="150dp"
-        android:id="@+id/imageView"
+        android:id="@+id/freeplay_logo_imageView"
         android:layout_alignParentTop="true"
         android:focusable="true"
         android:focusableInTouchMode="false"
