--- a/app/src/main/res/layout/pve_options.xml
+++ b/app/src/main/res/layout/pve_options.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:id="@+id/imageView"
+        android:id="@+id/freeplay_logo_imageView"
         android:layout_alignParentTop="true"
         android:focusable="true"
         android:focusableInTouchMode="false"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Difficulty"
         android:id="@+id/pve_difficulty_textview"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/freeplay_logo_imageView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="22dp"
         android:layout_marginTop="33dp"
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Easy"
-                android:id="@+id/pve_difficulty_easy_radioButton"
+                android:id="@+id/freeplay_difficulty_easy_radioButton"
                 android:layout_below="@+id/pve_difficulty_textview"
                 android:layout_alignStart="@+id/pve_difficulty_textview"
                 android:layout_marginTop="25dp"
@@ -61,10 +61,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Medium"
-                android:id="@+id/pve_difficulty_medium_radioButton"
+                android:id="@+id/freeplay_difficulty_medium_radioButton"
                 android:checked="false"
-                android:layout_alignTop="@+id/pve_difficulty_easy_radioButton"
-                android:layout_toEndOf="@+id/pve_difficulty_easy_radioButton"
+                android:layout_alignTop="@+id/freeplay_difficulty_easy_radioButton"
+                android:layout_toEndOf="@+id/freeplay_difficulty_easy_radioButton"
                 android:layout_marginStart="25dp"
                 android:layout_gravity="top"
                 android:layout_weight=".33"
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:text="Hard"
                 android:id="@+id/pve_difficulty_hard_radioButton"
-                android:layout_alignTop="@+id/pve_difficulty_medium_radioButton"
+                android:layout_alignTop="@+id/freeplay_difficulty_medium_radioButton"
                 android:checked="false"
                 android:layout_alignEnd="@+id/cclogo_textView"
                 android:layout_weight=".33"
@@ -145,7 +145,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Game"
-        android:id="@+id/pve_startGame_button"
+        android:id="@+id/freeplay_next_button"
         android:layout_marginBottom="33dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
