Things done: 1)Board content description of tiles on game_screen and board_setup 2)Added tags of tiles to game_screen 3)Added content description of piece and color on tile to game_screen 4)Added content description of piece and color on tile to free play 4)Added rules to move from free play board to game_screen 5)Added ability to move free play board to game_screen 6)Changed name of tag id to a more intuitive one 7)Fixed the need to click twice to move to another screen 8)Added functionality to the start button on start screen 9)Fixed the problem of removing piece when pieces are the same 10)Fixed typo in fp_options regarding OpponentType

--- a/app/src/main/res/layout/fp_boardsetup.xml
+++ b/app/src/main/res/layout/fp_boardsetup.xml
@@ -1659,7 +1659,8 @@
         android:clickable="true"
         android:focusable="true"
         android:text="Start"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:onClick="onStartButtonClick" />
 
     <RelativeLayout
         android:id="@+id/chesspieces_relative"
