Things done: 1)Fixed problem with C5 button that wasn't clicking 2)Fixed problem with rules regarding free play board progression 3)Fixed app crash when starting game with free play board and computer opponent 4)Fixed content errors in the following:      -Black pieces description      -App Name      -Voice command button      -Opponent type popup      -Current move color      -Play against computer button 5)Added content description to pieces on free play board setup 6)Changed pve difficulty and color text view  width fill_parent 7)Changed free play textviews width to fill_parent 8)Added options popup menu on game_screen 9)Added notification to voice command 10)Added New game implementation 11)Added home screen implementation

--- a/app/src/main/res/layout/fp_boardsetup.xml
+++ b/app/src/main/res/layout/fp_boardsetup.xml
@@ -1686,7 +1686,8 @@
             android:background="@drawable/rook_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White Rook"/>
 
         <ImageButton
             android:id="@+id/knight_w_button"
@@ -1697,7 +1698,8 @@
             android:background="@drawable/knight_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White Knight"/>
 
         <ImageButton
             android:id="@+id/bishop_w_button"
@@ -1708,7 +1710,8 @@
             android:background="@drawable/bishop_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White Bishop"/>
 
         <ImageButton
             android:id="@+id/queen_w_button"
@@ -1719,7 +1722,8 @@
             android:background="@drawable/queen_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White Queen"/>
 
         <ImageButton
             android:id="@+id/king_w_button"
@@ -1730,7 +1734,8 @@
             android:background="@drawable/king_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White King"/>
 
         <ImageButton
             android:id="@+id/pawn_w_button"
@@ -1741,7 +1746,8 @@
             android:background="@drawable/pawn_w"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="White Pawn"/>
 
         <ImageButton
             android:id="@+id/rook_b_button"
@@ -1752,7 +1758,8 @@
             android:background="@drawable/rook_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black Rook"/>
 
         <ImageButton
             android:id="@+id/knight_b_button"
@@ -1763,7 +1770,8 @@
             android:background="@drawable/knight_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black Knight"/>
 
         <ImageButton
             android:id="@+id/bishop_b_button"
@@ -1774,7 +1782,8 @@
             android:background="@drawable/bishop_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black Bishop"/>
 
         <ImageButton
             android:id="@+id/queen_b_button"
@@ -1785,7 +1794,8 @@
             android:background="@drawable/queen_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black Queen"/>
 
         <ImageButton
             android:id="@+id/king_b_button"
@@ -1796,7 +1806,8 @@
             android:background="@drawable/king_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black King"/>
 
         <ImageButton
             android:id="@+id/pawn_b_button"
@@ -1807,7 +1818,8 @@
             android:background="@drawable/pawn_b"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onBenchButtonClick" />
+            android:onClick="onBenchButtonClick"
+            android:contentDescription="Black Pawn"/>
     </RelativeLayout>
 
 
