--- a/app/src/main/res/layout/fp_options.xml
+++ b/app/src/main/res/layout/fp_options.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/freeplay_currentPlayer_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/freeplay_logo_imageView"
             android:contentDescription="Whose turn is it?"
@@ -53,7 +53,7 @@
                 android:layout_weight=".5"
                 android:checked="false"
                 android:clickable="true"
-                android:contentDescription="White"
+                android:contentDescription="White pieces turn"
                 android:focusable="true"
                 android:onClick="onRadioButtonClick"
                 android:tag="whiteMove"
@@ -68,7 +68,7 @@
                 android:layout_weight=".5"
                 android:checked="false"
                 android:clickable="true"
-                android:contentDescription="Black"
+                android:contentDescription="Black pieces turn"
                 android:focusable="true"
                 android:onClick="onRadioButtonClick"
                 android:tag="blackMove"
@@ -79,7 +79,7 @@
 
         <TextView
             android:id="@+id/freeplay_p1Color_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/freeplay_currentPlayer_radioGroup"
             android:contentDescription="Color to play as"
@@ -104,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
                 android:clickable="true"
-                android:contentDescription="White"
+                android:contentDescription="Play as White"
                 android:focusable="true"
                 android:onClick="onRadioButtonClick"
                 android:tag="whitePlay"
@@ -119,7 +119,7 @@
                 android:layout_weight=".5"
                 android:checked="false"
                 android:clickable="true"
-                android:contentDescription="Black"
+                android:contentDescription="Play as Black"
                 android:focusable="true"
                 android:onClick="onRadioButtonClick"
                 android:tag="blackPlay"
@@ -131,11 +131,11 @@
 
         <TextView
             android:id="@+id/freeplay_pvedifficulty_textview"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/freeplay_logo_imageView"
-            android:contentDescription="Computer Difficulty"
+            android:contentDescription="Select Computer Difficulty"
             android:focusable="true"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
