--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -29,9 +29,9 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:focusableInTouchMode="false"
         android:clickable="true"
-        android:contentDescription="Play aginst computer "
+        android:contentDescription="Play against computer "
         android:contextClickable="false"
         android:onClick="onPvEButtonClick"
         android:textSize="25sp" />
@@ -46,7 +46,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp"
         android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:focusableInTouchMode="false"
         android:clickable="true"
         android:contentDescription="Play against another Player"
         android:contextClickable="false"
@@ -63,7 +63,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:focusableInTouchMode="false"
         android:clickable="true"
         android:contentDescription="Free Play"
         android:contextClickable="true"
