--- a/app/src/main/res/layout/pve_options.xml
+++ b/app/src/main/res/layout/pve_options.xml
@@ -18,7 +18,7 @@
         android:background="@drawable/chesscommandercropped" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Difficulty"
         android:id="@+id/pve_difficulty_textview"
@@ -94,7 +94,7 @@
     </RadioGroup>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Color"
         android:id="@+id/pve_color_textView"
